--- a/.babelrc
+++ b/.babelrc
@@ -4,5 +4,13 @@
     "@babel/typescript",
     "@babel/preset-react"
   ],
-  "plugins": ["syntax-object-rest-spread"]
+  "plugins": [
+    [
+      "babel-plugin-styled-components",
+      {
+        "minify": true
+      }
+    ],
+    "syntax-object-rest-spread"
+  ]
 }
