--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "css-loader": "^1.0.1",
     "express": "^4.16.4",
     "react": "^16.8.3",
-    "react-dom": "^16.8.3"
+    "react-dom": "^16.8.3",
+    "react-redux": "^7.1.0",
+    "redux": "^4.0.1",
+    "styled-components": "^4.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.3.4",
@@ -25,7 +28,11 @@
     "@types/node": "^12.0.3",
     "@types/react": "^16.8.18",
     "@types/react-dom": "^16.8.4",
+    "@types/react-redux": "^7.1.0",
+    "@types/redux": "^3.6.0",
+    "@types/styled-components": "^4.1.16",
     "babel-loader": "^8.0.5",
+    "babel-plugin-styled-components": "^1.10.1",
     "babel-plugin-syntax-object-rest-spread": "^6.13.0",
     "babel-polyfill": "^6.26.0",
     "mini-css-extract-plugin": "^0.5.0",
