--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
     "react-redux": "^7.1.0",
+    "react-svg": "^10.0.9",
     "redux": "^4.0.1",
     "styled-components": "^4.3.1"
   },
@@ -29,6 +30,7 @@
     "@types/react": "^16.8.18",
     "@types/react-dom": "^16.8.4",
     "@types/react-redux": "^7.1.0",
+    "@types/react-svg": "^5.0.0",
     "@types/redux": "^3.6.0",
     "@types/styled-components": "^4.1.16",
     "babel-loader": "^8.0.5",
